Add .no-scroll class

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -25,3 +25,11 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.no-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scroll {
+  scrollbar-width: none;
+}
